# FantasyLifeI-API

./: .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  FantasyLifeI-ModLoader.sln  FantasyLifeI-ModLoader.vcxproj  FantasyLifeI-ModLoader.vcxproj.filters  LICENSE  ModAPI.h  ModCommunicator.h  ModMeta.cpp  Player.hpp  README.md  dllmain.cpp  pch.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/doc/Mod/: ConfigurationFiles.md
.github/workflows/: build-check.yml  cd.yml  header-update.yml
DllProxy/: CMakeLists.txt  version_proxy.def
DllProxy/src/: dllmain.cpp
MinHook/src/: buffer.c
include/: GameCache.hpp  GameData.hpp  ModAPI.h  ModCommunicator.h  ModCommunicator.hpp  ModEnvironnement.hpp  ModLoader.hpp  ModMeta.h  ModMeta.hpp  Offset.h  SDK.h  Utils.hpp  pch.h
include/API/: GameObjectProxy.hpp  Language.hpp  LifeData.cpp  LifeData.hpp
include/API/Common/: Common.hpp  CommonElementAttrParam.hpp  CommonItemTableSetting.hpp  CommonPickParamData.hpp  CommonPickParamDataPickParam.hpp  CommonPickStatusParam.hpp  CommonPriceInfo.hpp  CommonSkillParam.hpp
include/API/Entites/: EntityStats.hpp
include/API/Entities/: CharaData.hpp  EntityStats.hpp  EntityStatus.hpp
include/API/Identifier/: ItemIdentifier.hpp  RecipeIdentifier.hpp  SkillIdentifier.hpp
include/API/Item/: ItemArmorData.hpp  ItemConsumeData.hpp  ItemCraftData.hpp  ItemData.hpp  ItemEquipData.hpp  ItemIdentifier.hpp  ItemImportantData.hpp  ItemKitData.hpp  ItemLifeToolsData.hpp  ItemMaterialData.hpp  ItemPowerUpData.hpp  ItemUniqueSkillEquipData.hpp  ItemVehicleData.hpp  ItemWeaponData.hpp
include/API/Life/: Life.hpp  LifeData.hpp  ULifeData.hpp
include/API/Recipe/: RecipeData.hpp  RecipeDataItemInfo.hpp  RecipeDataLifeParamInfo.hpp  RecipeDataRewardData.hpp
include/API/Skill/: EffectCondition.hpp  SkillData.hpp  SkillEffectInfo.hpp
include/API/Table/: ItemTableDetail.hpp
include/API/World/: MapAttributeInfo.hpp  MapData.hpp  MapDataSubMapData.hpp  MapSubLevel.hpp
include/Engine/: Core.h  DataTable.hpp  FHandle.hpp  FName.hpp  FUObjectArray.hpp  Input.hpp  UGameDataAsset.hpp  UObject.hpp  Utils.hpp
include/Engine/Container/: BasicType.h  Map.h  Set.h  UGameDataAsset.h
include/Engine/Template/: AndOrNot.h  IsPodType.h  IsPointer.h  Tuple.h  UnrealTemplate.h  UnrealTypeTrait.h  isArithmetic.h
include/Game/: ELife.h  Element.hpp  FGDStCommon.hpp  FGExtra.h  Types.hpp  UDynamicDataManager.hpp  UGDDCharaStatus.hpp  UGDSCharaData.h  UGDSCharaData.hpp  UGDSCharaLevelConfig.hpp  UGDSCharaParameter.h  UGDSItemRecipeData.hpp  UGDSItemText.hpp  UGDSLifeData.h  UGDSLifeData.hpp  UGDSLifeText.hpp  UGDSLifeText_Noun.hpp  UGDSRecipeData.hpp  USDMDataPropertyClass.h  UStaticDataManager.hpp
include/Game/Character/: CharaMenu.hpp  Enemy.hpp  FCharacterDetailInfo.hpp  UGDDCharaStatus.hpp  UGDSCharaData.hpp  UGDSCharaParameter.hpp  UGDSCharaParameterEnemy.hpp
include/Game/Equip/: Equip.hpp
include/Game/FastTravel/: UGDSFastTravel.hpp
include/Game/Global/: UDynamicDataManager.hpp  UStaticDataManager.hpp
include/Game/Graphic/: UGDSMenuIconTexture.hpp
include/Game/Inventory/: Inventory.hpp
include/Game/Item/: FBaseItemDetailWindowInfo.hpp  FGDItemData.hpp  Item.hpp  NameIdentifier.hpp  UGDSItemArmorData.hpp  UGDSItemConsumeData.hpp  UGDSItemCraftData.hpp  UGDSItemImportantData.hpp  UGDSItemLifeToolsData.hpp  UGDSItemMaterialData.hpp  UGDSItemPowerUpData.hpp  UGDSItemText_Noun.hpp  UGDSItemVehicleData.hpp  UGDSItemWeaponData.hpp
include/Game/Life/: Life.hpp  UGDSLifeData.hpp  UGDSLifeText.hpp  UGDSLifeText_Noun.hpp
include/Game/Menu/: Menu.hpp
include/Game/Noun/: UGDSBattleCommandNameNoun.hpp  UGDSCharaText_Noun.hpp  UGDSItemText_Noun.hpp  UGDSLifeText_Noun.hpp  UGDSMapText_Noun.hpp  UGDSMenuText_Noun.hpp  UGDSPlantDungeonText_Noun.hpp  UGDSQuestRequestMapText_Noun.hpp  UGDSQuestTitleText.hpp  UGDSSkillText_Noun.hpp  UGDSSystemText_Noun.hpp
include/Game/Npc/: UGDSNPCRoomData.hpp
include/Game/PickPoint/: PickPoint.hpp  UGDSMapPickPoint.hpp  UGDSMapPickPointConfig.hpp
include/Game/Recipe/: Recipe.hpp  UGDSRecipeData.hpp
include/Game/Skill/: Skill.hpp  UGDSSkillData.hpp
include/Hook/: EventHandler.hpp  Memory.hpp  MemoryHelper.hpp  Pattern.hpp
include/Loader/: ModAPI.hpp  ModCommunicator.hpp  ModEnvironnement.hpp
include/Logger/: Logger.hpp  ModLoaderLogger.hpp
include/Patcher/: Patch.hpp  Patcher.hpp  Trampoline.hpp
include/SDK/: ACLPlugin.h  AIModule.h  ActorLayerUtilities.h  ActorSequence.h  AdvancedWidgets.h  AndroidFileServer.h  AndroidPermission.h  AnimationCore.h  AnimationSharing.h  AnimationWarpingRuntime.h  AppleImageUtils.h  ArchVisCharacter.h  AssetRegistry.h  AssetTags.h  AudioAnalyzer.h  AudioCapture.h  AudioExtensions.h  AudioLinkCore.h  AudioLinkEngine.h  AudioPlatformConfiguration.h  AudioSynesthesia.h  AudioWidgets.h  AutomationUtils.h  AvfMediaFactory.h  BasicType.h  BluePrints.h  BuildPatchServices.h  CableComponent.h  Chaos.h  ChaosCaching.h  ChaosCloth.h  ChaosNiagara.h  ChaosSolverEngine.h  CharamakeBoneModify.h  CinematicCamera.h  ClothingSystemRuntimeCommon.h  ClothingSystemRuntimeInterface.h  ClothingSystemRuntimeNv.h  ConsoleVariablesEditorRuntime.h  ControlRig.h  (+153 more)
src/: CommonData.cpp  GameCache.cpp  GameData.cpp  GameRegistries.cpp  ModCommunicator.cpp  ModEnvironnement.cpp  ModLoader.cpp  ModMeta.cpp  Utils.cpp  dllmain.cpp
src/Engine/: FNamePool.cpp  FUObjectArray.cpp
src/Hook/: EventHandler.cpp  Memory.cpp  MemoryHelper.cpp  Pattern.cpp
src/Lib/: miniz.c
src/Loader/: ModCommunicator.cpp  ModEnvironnement.cpp
src/Mod/: ModEnvironnement.cpp
src/Patcher/: Patch.cpp  Patcher.cpp  Trampoline.cpp
(+72 files in other folders)
